# BriteKit

./: README.md  api-reference.md  command-api-reference.md  command-reference.md  config-reference.md  pyproject.toml
install/data/audioset/curated/: cow.csv  (+1 more)
install/yaml/: base_config.yaml  cfg_aug.yaml  cfg_decibels.yaml  cfg_default.yaml  cfg_infer.yaml  cfg_low_band.yaml  cfg_retrain.yaml  cfg_temp.yaml  cfg_train.yaml  cfg_tune.yaml  infer.yaml  train_dla.yaml  train_effnet.yaml  train_gernet.yaml  train_hgnet.yaml  train_temp.yaml  train_timm.yaml  train_vovnet.yaml  tune1.yaml  tune_aug.yaml  tune_categorical.yaml  tune_weight_decay.yaml
install/yaml/samples/: train_dla.yaml  train_effnet.yaml  train_gernet.yaml  train_hgnet.yaml  train_timm.yaml
scripts/: cfg_to_yaml.py  check_code.sh  copy_curated.py  create_occurrence_csv.r  curate.py  download_occurrence_data.r  generate_readme.py  migrate_occurrence_db.py  migrate_training_db.py
src/britekit/: __about__.py  __init__.py  cli.py
src/britekit/commands/: __init__.py  _analyze.py  _audioset.py  _calibrate.py  _ckpt_ops.py  _db_add.py  _db_delete.py  _embed.py  _extract.py  _find_dup.py  _inat.py  _init.py  _pickle.py  _plot.py  _reextract.py  _reports.py  _search.py  _train.py  _tune.py  _wav2mp3.py  _xeno.py  _youtube.py  analyze.py  analyze_cmd.py  audioset.py  audioset_cmd.py  calibrate_cmd.py  ckpt_ops.py  ckpt_ops_cmd.py  db_add.py  db_delete.py  db_delete_cmd.py  embed.py  embed_cmd.py  extract.py  extract_cmd.py  find_dup.py  find_dup_cmd.py  inat.py  inat_cmd.py  (+19 more)
src/britekit/core/: __init__.py  analyzer.py  audio.py  augmentation.py  base_config.py  config_loader.py  data_module.py  pickler.py  plot.py  predictor.py  trainer.py  tuner.py  util.py
src/britekit/models/: base_model.py  dla.py  effnet.py  gernet.py  hgnet.py  model_loader.py  vovnet.py
src/britekit/occurrence_db/: occurrence_data_provider.py  occurrence_db.py
src/britekit/testing/: base_tester.py  per_minute_tester.py  per_recording_tester.py  per_segment_tester.py
src/britekit/training_db/: extractor.py  training_data_provider.py  training_db.py
src/britekit/tuning/: tuner.py
tests/: __init__.py  test_audio.py  test_db_convert.py  test_extractor.py  test_occurrence_db.py  test_predictor.py  test_training_db.py  test_util.py
tests/labels/: CommonYellowthroat_labels.txt
yaml/: tune_dropout.yaml  tune_learning_rate.yaml
