[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "britekit"
dynamic = ["version"]
description = 'Core functions for bioacoustic recognizers.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jan Huus", email = "jhuus1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click>=8.2,<8.3",
  "numpy>=2.2,<2.3",
  "onnx>=1.18,<2.0",
  "pandas>=2.2,<2.3",
  "pyinaturalist>=0.20,<1.0",
  "soundfile>=0.13,<1.0",
  "torch>=2.5,<2.7",
  "torchaudio>=2.5,<2.7",
  "librosa>=0.11,<2.0",
  "lightning>=2.5,<2.6",
  "matplotlib>=3.10,<3.11",
  "omegaconf>=2.3,<2.4",
  "scipy>=1.15,<2.0",
  "tensorboard>=2.19,<3.0",
  "timm>=1.0.17,<2.0",
  "yt-dlp>=2025.6.25",
]

[project.scripts]
britekit = "britekit.cli:cli"

[project.urls]
Documentation = "https://github.com/jhuus/BriteKit#readme"
Issues = "https://github.com/jhuus/BriteKit/issues"
Source = "https://github.com/jhuus/BriteKit"

[tool.hatch.version]
path = "src/britekit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "pytest>=8.3.5",
  "black>=25.0.0",
  "ruff>=0.11.12",
  "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/britekit"]

# Ensure non-Python sample assets are included in the wheel so
# importlib.resources.files("britekit.install") can access them.
[tool.hatch.build.targets.wheel.force-include]
"install" = "install"

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/britekit tests}"

[tool.coverage.run]
source_pkgs = ["britekit", "tests"]
branch = true
parallel = true
omit = [
  "src/britekit/__about__.py",
]

[tool.coverage.paths]
britekit = ["src/britekit", "*/britekit/src/britekit"]
tests = ["tests", "*/britekit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
